Add endpoint deletar agendamento
